@startuml

title __MTBDD's Class Diagram__\n

  namespace  {
    namespace TBDD {
      class MTBDD.MTBDD {
          - name : String
          - terminalIncomingEdges : Map<Node, List<Boolean>>
          - terminalNodes : Map<Node, List<Node>>
          + MTBDD()
          + MTBDD()
          + getCopy()
          + getName()
          + getRoot()
          + getTerminalIncomingEdges()
          + getTerminalNodes()
          + setName()
          + setRoot()
          + setTerminalIncomingEdges()
          + setTerminalNodes()
          + toString()
          - height()
          - printGivenLevel()
          - printLevelOrder()
      }
    }
  }
  

  namespace  {
    namespace TBDD {
      class MTBDD.MTBDDBuilder {
          + MTBDDBuilder()
          + MTBDDBuilder()
          + addNonterminalNode()
          + addRoot()
          + addTerminalNode()
          + getCurrentNode()
          + getMTBDD()
          + makeMTBDDCopy()
          + removeChildNode()
          + removeTerminalNode()
          + setCurrentNode()
          + setMTBDD()
          - copy()
          - lowestNonterminalNodes()
          - terminalNodesForCopy()
      }
    }
  }
  

  namespace  {
    namespace TBDD {
      class MTBDD.Node {
          - incomingEdge : boolean
          - value : Object
          + Node()
          + Node()
          + equals()
          + getChildByEdge()
          + getClone()
          + getIncomingEdge()
          + getLeftChild()
          + getParent()
          + getRightChild()
          + getValue()
          + hashCode()
          + isRootNode()
          + isTerminalNode()
          + setIncomingEdge()
          + setLeftChild()
          + setParent()
          + setRightChild()
          + setValue()
          + toString()
      }
    }
  }
  

  MTBDD.MTBDD o-- MTBDD.Node : root
  MTBDD.MTBDDBuilder o-- MTBDD.Node : currentNode
  MTBDD.MTBDDBuilder o-- MTBDD.MTBDD : mtbdd
  MTBDD.Node o-- MTBDD.Node : leftChild
  MTBDD.Node o-- MTBDD.Node : parent
  MTBDD.Node o-- MTBDD.Node : rightChild


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
